Fixed a bug in displaying task deletion on mobile devices

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -184,6 +184,7 @@ input::placeholder
                 cursor: pointer
 
                 @include mobile
+                    top: -6px
                     opacity: 1
                     @include font-style(100, 30px, auto, auto)
 .down-menu
